# FastAPIBackendMetrics

./: .env.base  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TASK.md  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: bcb99d625478_messages_table.py
api/: deps.py
api/v1/: __init__.py  health.py  messages.py  process.py
api/v1/schemas/: message.py  process.py
database/: __init__.py
database/models/: __init__.py  base.py  message.py
infra/: alerts.yml  prometheus.yml  promtail-config.yml
infra/dashboards/: BackendView.json  logs.json
middlewares/: metrics.py
repositories/: base.py  message.py
services/: messages.py  process.py
tests/: test_api.py  test_metrics.py
