[project]
name = "fastapi-backend-and-metrics"
version = "1.0.0"
description = ""
authors = [
    {name = "Azamat Kuchkarov",email = "mrst0rm@bk.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
